data/all_generated_tests/raw_wast_tests/block_StackCorruption_1869.wast
;; 10. **Test Description**:    Develop a block scenario where exception handling (if supported) interacts with stack states. Within the block, simulate a sequence of stack operations interrupted by an exception throw and catch sequence. Verify whether the unwinding of the stack during exceptions maintains a coherent stack state post-exception handling.  These test descriptions ensure various edge cases and bigger scenarios where stack management by different WebAssembly implementations in `block` instructions can lead to stack corruption if not handled correctly. These tests specifically target the nuanced differences in stack state handling between the specified environments.

(assert_invalid
  (module
    (type $exn (func))
    (tag $t (export "t") (type $exn))
    (func $type-block-exception (result i32)
      (block (result i32)
        (i32.const 42)
        try
          (do
            (throw $t)
          )
          (catch $t)
            (i32.const 0)
        end
      )
    )
  )
  "type mismatch"
)